bitfield/tests/08-non-power-of-two.stderr
error: BitfieldSpecifier expected a number of variants which is a power of 2
  --> tests/08-non-power-of-two.rs:11:10
   |
11 | pub enum Bad {
   |          ^^^
